[metadata]
name = optinist
version = 0.0.1-pre
description = optinist description
long_description = file: README.md
license = MIT
author = OIST
author_email = abcd@blueqat.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    fastapi==0.68.1
    uvicorn==0.15.0
    aiofiles
    numpy
    tqdm
    pyyaml
    imageio
    tifffile
    python-multipart
    future
    pynwb
    psutil
    nbstripout
    snakemake
    jinja2==3.0.3
    # caiman@git+https://github.com/flatironinstitute/CaImAn