[metadata]
name = optinist
version = v0.3.0
description = optinist description
long_description = file: README.md
url="https://github.com/oist/optinist"
license = GPL3.0
author = OIST
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
# install_requires =
#     # caiman@git+https://github.com/flatironinstitute/CaImAn