[metadata]
name = optinist
version = 0.0.1-pre
description = optinist description
long_description = file: README.md
license = MIT
author = OIST
author_email = abcd@blueqat.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    blueqat >= 0.4.2
    amazon-braket-sdk >= 1.5.13