[metadata]
name = optinist
version = 0.0.1-pre
description = optinist description
long_description = file: README.md
license = MIT
author = OIST
author_email = abcd@blueqat.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    absl-py==1.0.0
    aiofiles==0.8.0
    anyio==3.4.0
    appnope==0.1.2
    asgiref==3.4.1
    astunparse==1.6.3
    attrs==21.4.0
    backcall==0.2.0
    bcrypt==3.2.0
    bleach==4.1.0
    bokeh==2.4.2
    cachetools==4.2.4
    certifi==2021.10.8
    cffi==1.15.0
    charset-normalizer==2.0.10
    click==8.0.3
    colorcet==3.0.0
    cryptography==36.0.1
    cycler==0.11.0
    cython==0.29.26
    debugpy==1.5.1
    decorator==5.1.0
    entrypoints==0.3
    fastapi==0.70.1
    flatbuffers==2.0
    fonttools==4.28.5
    future==0.18.2
    gast==0.4.0
    google-auth-oauthlib==0.4.6
    google-auth==2.3.3
    google-pasta==0.2.0
    grpcio==1.43.0
    h11==0.12.0
    h5py==3.6.0
    hdmf==3.1.1
    holoviews==1.14.7
    idna==3.3
    imageio==2.13.5
    importlib-metadata==4.10.0
    ipykernel==6.6.1
    ipyparallel==8.1.0
    ipython-genutils==0.2.0
    ipython==7.31.0
    jedi==0.18.1
    jinja2==3.0.3
    joblib==1.1.0
    jsonschema==3.2.0
    jupyter-client==7.1.0
    jupyter-core==4.9.1
    keras-preprocessing==1.1.2
    keras==2.7.0
    kiwisolver==1.3.2
    libclang==12.0.0
    llvmlite==0.37.0
    markdown==3.3.6
    markupsafe==2.0.1
    matplotlib-inline==0.1.3
    matplotlib==3.5.1
    natsort==8.0.2
    nbformat==5.1.3
    nbstripout==0.5.0
    nest-asyncio==1.5.4
    networkx==2.6.3
    numba==0.54.1
    numpy==1.20.3
    oauthlib==3.1.1
    opencv-python==4.5.5.62
    opt-einsum==3.3.0
    packaging==21.3; python_version >= '3.6'
    pandas==1.3.5
    panel==0.12.6
    param==1.12.0
    paramiko==2.9.1
    parso==0.8.3
    patsy==0.5.2
    pexpect==4.8.0
    pickleshare==0.7.5
    pillow==9.0.0
    prompt-toolkit==3.0.24
    protobuf==3.19.1
    psutil==5.9.0
    ptyprocess==0.7.0
    pyasn1-modules==0.2.8
    pyasn1==0.4.8
    pycparser==2.21
    pyct==0.4.8
    pydantic==1.9.0
    pygments==2.11.1
    pynacl==1.4.0
    pynwb==2.0.0
    pyparsing==3.0.6
    pyqtgraph==0.12.3
    pyrsistent==0.18.0
    python-dateutil==2.8.2
    python-multipart==0.0.5
    pytz==2021.3
    pyviz-comms==2.1.0
    pywavelets==1.2.0
    pyyaml==6.0
    pyzmq==22.3.0
    rastermap==0.1.3
    requests-oauthlib==1.3.0
    requests==2.27.1
    rsa==4.8
    ruamel.yaml.clib==0.2.6
    ruamel.yaml==0.17.20
    sbxreader==0.2.0
    scanimage-tiff-reader==1.4.1
    scikit-image==0.19.1
    scikit-learn==1.0.2
    scipy==1.7.3
    setuptools==60.2.0; python_version >= '3.7'
    six==1.16.0
    sklearn==0.0
    sniffio==1.2.0
    starlette==0.16.0
    statsmodels==0.13.1
    suite2p==0.10.3
    tensorboard-data-server==0.6.1
    tensorboard-plugin-wit==1.8.1
    tensorboard==2.7.0
    tensorflow-estimator==2.7.0
    tensorflow-io-gcs-filesystem==0.23.1
    tensorflow==2.7.0
    termcolor==1.1.0
    threadpoolctl==3.0.0
    tifffile==2021.11.2
    torch==1.10.1
    tornado==6.1
    tqdm==4.62.3
    traitlets==5.1.1
    typing-extensions==4.0.1
    urllib3==1.26.7
    uvicorn==0.16.0
    wcwidth==0.2.5
    webencodings==0.5.1
    websockets==10.1
    werkzeug==2.0.2
    wheel==0.37.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    wrapt==1.13.3
    zipp==3.7.0
    caiman@git+https://github.com/flatironinstitute/CaImAn