[metadata]
name = optinist
version = 0.0.1-pre
description = optinist description
long_description = file: README.md
license = MIT
author = OIST
author_email = abcd@blueqat.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    fastapi==0.68.1
    uvicorn==0.15.0
    websockets==10.0
    numpy 
    pyyaml 
    imageio 
    aiofiles 
    python-multipart 
    Cython 
    future 
    scikit-image 
    sklearn 
    pynwb 
    ipyparallel 
    holoviews 
    psutil 
    nbstripout 
    tensorflow<=2.6.1
    torch<=1.10.0
    opencv-python 
    suite2p
    statsmodels<=0.13.1
    caiman@git+https://github.com/flatironinstitute/CaImAn